# MovieLens-Api

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  movies.db  pyproject.toml  requirements.txt
.github/workflows/: updateReq.yml
analysis/: recommender.py  stats.py
api/routes/: movies.py  stats.py  users.py
app/: crud.py  database.py  main.py  models.py  schemas.py
etl/: load_data.py
migrations/versions/: 46085c047836_initial.py
scripts/: download_data.py
task_guides/: TASK_1_DB_MODELS.md  TASK_2_ETL_SCRIPT.md  TASK_3_CORE_API_ENDPOINTS.md  TASK_4_GENRE_ANALYSIS.md  TASK_5_USER_RATINGS_HISTORY.md  TASK_6_RECOMMENDER_SYSTEM.md  TASK_7_TEST_AND_VISUALIZE.md  TASK_8_DEPLOY_AND_POLISH.md
tests/: test_api.py
